galeria de fotos v0.1

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="contador" id="contadorNamoro"></div>
     <div class="contador" id="contadorGravidez"></div>
     <div class="contador" id="contadorNascimento"></div>
+    <img id="foto" class="imagem" src="images/img1.png" alt="Fotos do casal">
     <div class="mensagem" id="mensagem"></div>
-    <!-- <img id="foto" class="imagem" src="images/img1.png" alt="Fotos do casal"> -->
     <script src="script.js"></script>
 </body>
 </html>
