removi o artefato da tela no load inicial

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="contador" id="contadorNamoro"></div>
     <div class="contador" id="contadorGravidez"></div>
     <div class="contador" id="contadorNascimento"></div>
-    <img id="foto" class="imagem" src="images/img1.png" alt="Fotos do casal">
+    <img id="foto" class="imagem">
     <div class="mensagem" id="mensagem"></div>
     <script src="script.js"></script>
 </body>
