inclusão da linha do tempo de relacionamento

--- a/index.html
+++ b/index.html
@@ -16,6 +16,34 @@
     <div class="contador" id="contadorNascimento"></div>
     <img id="foto" class="imagem">
     <div class="mensagem" id="mensagem"></div>
+
+    <div class="timeline">
+
+        <div class="timeline-item left">
+            <div class="timeline-content">
+                <h3>Pedido de Namoro 💍</h3>
+                <p>10 de Agosto de 2024</p>
+                <p>Você disse "sim" e minha vida ganhou cor!</p>
+            </div>
+        </div>
+
+        <div class="timeline-item right">
+            <div class="timeline-content">
+                <h3>Descoberta da Gravidez 👶</h3>
+                <p>06 de Junho de 2025</p>
+                <p>O dia mais feliz dos últimos tempos!</p>
+            </div>
+        </div>
+
+        <div class="timeline-item left">
+            <div class="timeline-content">
+                <h3>Nascimento do Nosso Bebê 🎉</h3>
+                <p>Previsto: Fevereiro de 2026</p>
+                <p>Mal podemos esperar para te conhecer, pequenino(a)!</p>
+            </div>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
