--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="timeline-content">
                 <h3>Descoberta da Gravidez 👶</h3>
                 <p>06 de Junho de 2025</p>
-                <p>O dia mais feliz dos últimos tempos!</p>
+                <p>Ressignificou a minha vida por completo!</p>
             </div>
         </div>
 
