organização dos titulos e inclusão do cabeçalho da linha do tempo

--- a/index.html
+++ b/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosso Amor</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="titulo">
         <h1>Nosso Amor 💖</h1>
-        <h2>Estela e Henrry</h2>
+        <h1>Estela e Henrry</h1>
     </div>
     <div class="contador" id="contadorNamoro"></div>
     <div class="contador" id="contadorGravidez"></div>
     <div class="contador" id="contadorNascimento"></div>
     <img id="foto" class="imagem">
     <div class="mensagem" id="mensagem"></div>
+
+    <div class="titulo">
+        <h3>Linha do Tempo</h3>
+    </div>
 
     <div class="timeline">
 
@@ -46,4 +52,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
