index: inclusão de eventos na linha do tempo. css: atualização da formatação dos paragrafos dos cards da linha do tempo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="contador" id="contadorNamoro"></div>
     <div class="contador" id="contadorGravidez"></div>
     <div class="contador" id="contadorNascimento"></div>
-    <img id="foto" class="imagem">
+    <img id="foto" class="imagem" src="images/img1.jpg">
     <div class="mensagem" id="mensagem"></div>
 
     <div class="titulo">
@@ -24,6 +24,23 @@
     </div>
 
     <div class="timeline">
+
+        <div class="timeline-item left">
+            <div class="timeline-content">
+                <h3>Dia em que tudo começou ❤️</h3>
+                <p>13 de Fevereiro de 2024</p>
+                <p>Na porta da festa sentada na calçada conversando, lá estava ela</p>
+            </div>
+        </div>
+
+        <div class="timeline-item right">
+            <div class="timeline-content">
+                <h3>Primeiro beijo</h3>
+                <p>24 de Março de 2024</p>
+                <p>Enquanto dançavamos, nossos olhares se cruzaram e meu coração bateu mais forte!</p>
+            </div>
+        </div>
+
         <div class="timeline-item left">
             <div class="timeline-content">
                 <h3>Pedido de Namoro 💍</h3>
