adiciona emoji ao título do primeiro beijo na linha do tempo

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <div class="timeline-item right">
             <div class="timeline-content">
-                <h3>Primeiro beijo</h3>
+                <h3>Primeiro beijo 😘</h3>
                 <p>24 de Março de 2024</p>
                 <p>Enquanto dançavamos, nossos olhares se cruzaram e meu coração bateu mais forte!</p>
             </div>
