adiciona mensagem de amor na seção de mensagens

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="contador" id="contadorGravidez"></div>
     <div class="contador" id="contadorNascimento"></div>
     <img id="foto" class="imagem" src="images/img1.jpg">
-    <div class="mensagem" id="mensagem"></div>
+    <div class="mensagem" id="mensagem">❤️ eu te amo 👸🏾</div>
 
     <div class="titulo">
         <h3>Linha do Tempo</h3>
