corrige frase na seção "Pedido de Namoro" para melhorar a expressão

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="timeline-content">
                 <h3>Pedido de Namoro 💍</h3>
                 <p>10 de Agosto de 2024</p>
-                <p>Você disse "sim" e minha vida ganhou cor!</p>
+                <p>Você disse "sim" e meu mundo ganhou cor!</p>
             </div>
         </div>
 
