atualiza dicas para gestantes, substitui lista por exibição dinâmica e melhora o estilo visual

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Dancing+Script:wght@400;700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -56,15 +56,8 @@
                     <p>2 meses de gestação - Uma nova aventura começou!</p>
                 </div>
                 <div class="pregnancy-tips">
-                    <h4>💝 Dicas Especiais para Mamãe:</h4>
-                    <ul>
-                        <li>Descanse bastante e cuide de você</li>
-                        <li>Beba muita água e se alimente bem</li>
-                        <li>Faça exercícios leves recomendados pelo médico</li>
-                        <li>Evite estresse e mantenha a calma</li>
-                        <li>Converse com nosso bebê todos os dias</li>
-                        <li>Pense positivo e imagine nosso futuro juntos</li>
-                    </ul>
+                    <h4>💝 Dica Especial para Mamãe:</h4>
+                    <div id="pregnancy-tip" class="pregnancy-tip"></div>
                 </div>
             </section>
 
