refatora seção de galeria de fotos, adiciona estrutura de quadro para imagem e melhora a exibição das mensagens com animação suave

--- a/index.html
+++ b/index.html
@@ -63,8 +63,12 @@
 
             <!-- Photo Gallery Section -->
             <section class="photo-section">
-                <img id="foto" class="photo" src="images/img1.jpg" alt="Foto do casal" loading="lazy">
-                <div class="message" id="mensagem">❤️ eu te amo 👸🏾</div>
+                <div class="photo-gallery">
+                    <div class="photo-frame">
+                        <img id="foto" class="photo" src="images/img1.jpg" alt="Foto do casal" loading="lazy">
+                    </div>
+                    <div class="message" id="mensagem">❤️ eu te amo 👸🏾</div>
+                </div>
             </section>
 
             <!-- Timeline Section -->
