atualiza mensagem do rodapé

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 - Feito com 🤍 por Henrry</p>
+            <p>&copy; 2024 - Feito com 🤍 por Henrry (eu mesmo, amor da sua vida)</p>
         </div>
     </footer>
 
