Update date in love story narrative to reflect accurate timeline

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     o amor, como toda grande obra, não se constrói apenas de êxtase; ele exige luta, paciência e a
                     coragem de enfrentar tempestades.<br><br>
                     O tempo, esse escultor incansável, moldou nosso amor com delicadeza e urgência, mas também com
-                    desafios que testaram nossa resiliência. Em 1º de agosto de 2024, coloquei em seu dedo uma aliança,
+                    desafios que testaram nossa resiliência. Em 10 de agosto de 2024, coloquei em seu dedo uma aliança,
                     não apenas para pedir sua mão em namoro, mas para prometer que caminharíamos juntos, enfrentando as
                     diferentes marés da vida. Cada dia desde então foi uma construção, um tijolo de afeto, confiança e
                     sonhos compartilhados, mas também de noites insones, conversas difíceis e sacrifícios para alinhar
